css/style.css
* {
    box-sizing: border-box;
}

body{

    margin: 0;
    color: rgb(61, 61, 61);
    text-align: center;
    background-color:rgb(224, 224, 224);
    font-family: 'Roboto', sans-serif;

}

  .nav {
    display: flex;
    justify-content: space-around;
    list-style-type: none;
    margin: 0 auto;
    padding: 0;
    display:inline-block;
    width: 90%;
    margin-bottom: 1em;
    
  }

  .main-nav {

    text-align: center;
    margin-right: 0%;
  }
  
  .main-nav li {
    margin-bottom: .5em;
    padding:1em;
    background-color: rgb(254,254,254);
    width: 100%;
    font-weight: bold;
    
  }


  a {
    font-size: 1em;
    margin-bottom: 1em;
    color: #000000;
    text-decoration: none;
  }



  main{

    background-color: rgb(226, 218, 199);
    padding-bottom: 1em;
  }

  
  img{
    max-width: 90%;
    margin: 1em;
  }
  
  header{
    margin-bottom: 1em;
    margin-top: -2rem;
  }
  
  header img{
    margin-top: 10%;
    width: 70%;
  }

  .card{

    background-color: rgb(238, 238, 238);
  }

  p{
    margin: 1em;
  }

  h1{
    font-size: 2em;
    font-weight: bold;
  }

  h2{
    padding-top: 1em;
  }



  #f-name{
    font-weight:bold;
    float: left;
    margin-left: 0;
    margin-top: 1em;
  }

  #f-top{
    float: right;;
  }
 
  #student{
    color: #2884b9;
  }

  .skills{
    margin-top: 4%;
    padding-top: 2%;
    padding-bottom: 2%;
  }

  .skills li {
    border-radius: 6px;
    display: inline-block;
    background: #2884b9;
    color: white;
    padding: 5px 10px;
    margin: 2px;
  }
  
  .skills li:nth-child(odd) {
    background: #8d8d8d;
  }

  #footer-nav{
    display:none;
    float: right;
  }

  span{
    font-weight: bold;
  
  }

  footer{
    border-top: .03em solid #ebebeb;
    margin-left: 5%;
    margin-right: 5%;
  }

  @media screen and (min-width: 768px) {

  .m-card{
    max-width: 50%;
    display: block;

  }

  .nav {
    display:flex;
    justify-content:center;
    font-weight: 700;
    list-style-type: none;
    padding: 0;
    width: 100%;

  }

  .main-nav {
    width: 100%;
    padding: 1em;

  }
  
  .main-nav li {
    margin-bottom: .6em;
    padding-right:0%;
    padding-left:0%;
    background-color: transparent;
    width:15%;
 
  }

  a {
    font-size: 1em;
    margin-bottom: 1em;
    color: #000000;
    text-decoration: none;
  }

  a:hover {
    color: #2884b9;

  }

  header{
    display: inline;
  }

  header img{
    margin-top: 10%;
    width: 40%;
  }
  main p{
    font-size: 1.5em;
    line-height: 1.5em;
  }
  .contact p{
    font-size: 1.5em;
    line-height: 1.5em;
  }

  header p{
    text-align: left;
    margin-top: 2em;
    font-size: 1.5em;
    line-height: 1.5em;

  }

  #p-image{
    float: right;
    margin-top: 3em;
  }

  main{
    margin-top: 10em;
  }

  .main-flex{
    display: flex;
    flex-wrap: wrap;
  }

  #f-top{
    display: none;
  }

  #footer-nav{
    display:block;
  }

  .f-nav{

    display:flex;
    justify-content:center;
    font-weight: 700;
    list-style-type: none;
    margin-right: 20%;

  }

  .f-nav li{

    font-size: .9em;
    margin-bottom: .6em;
    margin-right:1.5em;
    margin-left:1.5em;
    padding-left: .5em;
    padding-right: .5em;
    background-color: transparent;
    width:15%;

  }

  h3{
    font-size: 1.5em;
  }


  }



  @media screen and (min-width: 1024px) {

    .m-card{
      max-width: 33.3%;
      display: block;
  
    }

    .nav {
      display:flex;
      font-weight: 700;
      list-style-type: none;
      margin: 0;
      padding: 0;
      margin-right: 0%;
    
  
    }
  
    .main-nav {
      width: 60%;
      padding: 0em;
      float: right;
      margin-right: 0%;
      
  
    }
    
    .main-nav li {
      margin-bottom: .6em;
      padding-right:0%;
      padding-left:0%;
      background-color: transparent;
      width:15%;
   
    }  

  

    header img{
 
      width: 25%;
      margin-right: 15%;
      margin-top: -1em;

    }

    main{
      margin-top: 15%;
    }

    header p{
      text-align: left;
      margin-top: 4em;
      font-size: 1.5em;
      line-height: 1.5em ;
  
    }

    p{
      margin: 1em;
      margin-left: 6%;
    }
  
    h1{
      font-size: 3em;
      font-weight: bolder;
 
    }
  
    h2{
      padding-top: 1em;
    }

    #p-image{
      float: right;
      margin-top: 2em;
    }

    #student{
      
      margin-top: 5%;
      margin-bottom: 0;
      margin-left: 6%;
      font-size: 2em;
      text-align: left;

    }

    

  

  }

